# video-editor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  bench_text_alloc  benchmark_string_alloc  node_list.yml  project.json  test_expression.py
app/: Cargo.toml  build.rs  project.json  qt.conf
app/qml/: CanvasPanel.qml  FileListPanel.qml  MainMenuBar.qml  MainSplitView.qml  Settings.qml  Theme.qml  ThemeSettingsPage.qml  TimelineContent.qml  TimelineControlBar.qml  TimelineRuler.qml  TimelineView.qml  main.qml
app/src/: app.rs  command.rs  config.rs  cxxqt_object.rs  main.rs  menu.rs  shortcut.rs  theme.rs  track_list.rs  types.rs  utils.rs
app/src/action/: command.rs  handler.rs  mod.rs
app/src/action/commands/: entity.rs  entity_command.rs  mod.rs  track.rs
app/src/command/: handler.rs  history.rs  mod.rs  registry.rs  shortcut.rs
app/src/context/: context.rs  context_types.rs
app/src/dialogs/: composition_dialog.rs  export_dialog.rs  keyframe_dialog.rs  settings_dialog.rs
app/src/model/: assets.rs  mod.rs  node_graph.rs  ui_types.rs  vector.rs
app/src/panels/: assets.rs  mod.rs  tab_viewer.rs
app/src/panels/graph_editor/: actions.rs  drawing.rs  mod.rs
app/src/panels/inspector/: action_handler.rs  effects.rs  ensemble.rs  graph_items.rs  mod.rs  properties.rs  styles.rs
app/src/panels/node_editor/: adapter.rs  mod.rs
app/src/panels/preview/: action.rs  clip.rs  gizmo.rs  interaction.rs  mod.rs
app/src/panels/preview/vector_editor/: interaction.rs  renderer.rs  svg_parser.rs  svg_writer.rs
app/src/panels/timeline/: controls.rs  mod.rs  track_list.rs
app/src/panels/timeline/clip_area/: clip_interaction.rs  clips.rs  context_menu.rs  drag_and_drop.rs  mod.rs
app/src/panels/timeline/layer_area/: context_menu.rs  drag_and_drop.rs  interactions.rs  layer_interaction.rs  layers.rs  mod.rs
app/src/panels/timeline/ruler/: draw.rs  mod.rs  time_input.rs
app/src/panels/timeline/utils/: flatten.rs  mod.rs
app/src/state/: context.rs  context_types.rs  mod.rs
app/src/ui/: command_palette.rs  easing_menus.rs  menu.rs  mod.rs  selection.rs  tab_viewer.rs  theme.rs  viewport.rs
app/src/ui/dialogs/: composition_dialog.rs  confirmation.rs  export_dialog.rs  keyframe_dialog.rs  mod.rs  settings_dialog.rs
app/src/ui/panels/: assets.rs  graph_editor.rs  inspector.rs  mod.rs  node_editor.rs  preview.rs  settings.rs  timeline.rs
app/src/ui/panels/graph_editor/: actions.rs  drawing.rs  mod.rs  utils.rs
app/src/ui/panels/inspector/: action_handler.rs  effects.rs  ensemble.rs  graph_items.rs  mod.rs  properties.rs  styles.rs
app/src/ui/panels/node_editor/: adapter.rs  mod.rs
app/src/ui/panels/preview/: action.rs  clip.rs  gizmo.rs  grid.rs  interaction.rs  mod.rs
app/src/ui/panels/timeline/: mod.rs  (+5 more)
app/src/ui/widgets/: collection_editor.rs  mod.rs  modal.rs  reorderable_list.rs  searchable_context_menu.rs
app/src/utils/: mod.rs  property.rs
app/src/widgets/: collection_editor.rs  easing_menus.rs  mod.rs  property.rs  reorderable_list.rs  viewport.rs
app/src/widgets/context_menu/: builder.rs  mod.rs  render.rs  searchable.rs  types.rs
(+100 files in other folders)
