[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33.2", features = ["serde"] }
egui = "0.33.2"
egui_dock = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rfd = "0.14"
log = "0.4"
env_logger = "0.11"
library = { path = "../library" }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
thiserror = "1.0"
anyhow = "1.0" # Added dependency
directories = "5.0"
toml = "0.8"
egui-phosphor = "0.11"
regex = "1.10"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"