[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33.3", features = ["serde"] }
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui_dock = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "2.0.1"
rfd = "0.16"
log = "0.4"
env_logger = "0.11"
library = { path = "../library" }
egui_node_editor = { path = "../egui_node_editor" }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
thiserror = "2.0"
anyhow = "1.0" # Added dependency
directories = "6.0"
toml = "0.9"
egui-phosphor = { version = "0.11", features = ["fill"] }
catppuccin = "2.6"
once_cell = "1.18.0"
regex = "1.10"
ordered-float = { version = "5.1.0", features = ["serde"] }
skia-safe = { version = "0.91.0", features = ["gpu", "gl"] }
serde_json = "1.0.145"
egui_dnd = "0.14.0"
raw-window-handle = "0.6"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
egui_kittest = { version = "0.33.3", features = ["snapshot"] }

[package.metadata.bundle]
name = "My Video Editor App"
identifier = "me.liesegang.videoeditorapp"
icon = ["assets/icon_32x32.png", "assets/icon_128x128.png"]
version = "0.1.0"
copyright = "Copyright (c) 2025 Liesegang"
category = "Productivity"
short_description = "A video production software."
